v1.1.0/modules/schema/pages/class/VsConverter.adoc
= `VsConverter`
:toclevels: 4


+++DC side of the voltage source converter (VSC).+++


[cols="h,3",width=65%]
|===
| Type
| Class

| URI
| `cim:VsConverter`


| CIM standard (perspective)
| IEC61970 (Grid)



|===

== Class hierarchy
* xref::class/IdentifiedObject.adoc[`IdentifiedObject`]
** xref::class/PowerSystemResource.adoc[`PowerSystemResource`]
*** xref::class/Equipment.adoc[`Equipment`]
**** xref::class/ConductingEquipment.adoc[`ConductingEquipment`]
***** xref::class/ACDCConverter.adoc[`ACDCConverter`]
****** *`VsConverter`*


== Slots




[cols="1,1,2,1",width=100%]
|===
| Name | Type | Description | Inherited from

| <<CapabilityCurve,`CapabilityCurve`>>
//| [[slots_table.CapabilityCurve]]<<CapabilityCurve,`CapabilityCurve`>>
| 0..1 +
xref::class/VsCapabilityCurve.adoc[`VsCapabilityCurve`]
| +++Capability curve of this converter.+++
| _n/a_

| <<VSCDynamics,`VSCDynamics`>>
//| [[slots_table.VSCDynamics]]<<VSCDynamics,`VSCDynamics`>>
| 0..1 +
xref::class/VSCDynamics.adoc[`VSCDynamics`]
| +++Voltage source converter dynamics model used to describe dynamic behaviour of this converter.+++
| _n/a_

| <<delta,`delta`>>
//| [[slots_table.delta]]<<delta,`delta`>>
| 0..1 +
xref::class/AngleDegrees.adoc[`AngleDegrees`]
| +++Angle between VsConverter.uv and ACDCConverter.uc. It is converter’s state variable used in power flow. The attribute shall...+++
| _n/a_

| <<droop,`droop`>>
//| [[slots_table.droop]]<<droop,`droop`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Droop constant. The pu value is obtained as D [kV/MW] x Sb / Ubdc. The attribute shall be a positive value.+++
| _n/a_

| <<droopCompensation,`droopCompensation`>>
//| [[slots_table.droopCompensation]]<<droopCompensation,`droopCompensation`>>
| 0..1 +
xref::class/Resistance.adoc[`Resistance`]
| +++Compensation constant. Used to compensate for voltage drop when controlling voltage at a distant bus. The attribute shall be...+++
| _n/a_

| <<maxModulationIndex,`maxModulationIndex`>>
//| [[slots_table.maxModulationIndex]]<<maxModulationIndex,`maxModulationIndex`>>
| 0..1 +
https://w3id.org/linkml/Float[`float`]
| +++The maximum quotient between the AC converter voltage (Uc) and DC voltage (Ud). A factor typically less than 1. It is...+++
| _n/a_

| <<maxValveCurrent,`maxValveCurrent`>>
//| [[slots_table.maxValveCurrent]]<<maxValveCurrent,`maxValveCurrent`>>
| 0..1 +
xref::class/CurrentFlow.adoc[`CurrentFlow`]
| +++The maximum current through a valve. It is converter’s configuration data.+++
| _n/a_

| <<pPccControl,`pPccControl`>>
//| [[slots_table.pPccControl]]<<pPccControl,`pPccControl`>>
| 0..1 +
xref::enumeration/VsPpccControlKind.adoc[`VsPpccControlKind`]
| +++Kind of control of real power and/or DC voltage.+++
| _n/a_

| <<qPccControl,`qPccControl`>>
//| [[slots_table.qPccControl]]<<qPccControl,`qPccControl`>>
| 0..1 +
xref::enumeration/VsQpccControlKind.adoc[`VsQpccControlKind`]
| +++Kind of reactive power control.+++
| _n/a_

| <<qShare,`qShare`>>
//| [[slots_table.qShare]]<<qShare,`qShare`>>
| 0..1 +
xref::class/PerCent.adoc[`PerCent`]
| +++Reactive power sharing factor among parallel converters on Uac control. The attribute shall be a positive value or zero.+++
| _n/a_

| <<targetPWMfactor,`targetPWMfactor`>>
//| [[slots_table.targetPWMfactor]]<<targetPWMfactor,`targetPWMfactor`>>
| 0..1 +
https://w3id.org/linkml/Float[`float`]
| +++Magnitude of pulse-modulation factor. The attribute shall be a positive value.+++
| _n/a_

| <<targetPhasePcc,`targetPhasePcc`>>
//| [[slots_table.targetPhasePcc]]<<targetPhasePcc,`targetPhasePcc`>>
| 0..1 +
xref::class/AngleDegrees.adoc[`AngleDegrees`]
| +++Phase target at AC side, at point of common coupling. The attribute shall be a positive value.+++
| _n/a_

| <<targetPowerFactorPcc,`targetPowerFactorPcc`>>
//| [[slots_table.targetPowerFactorPcc]]<<targetPowerFactorPcc,`targetPowerFactorPcc`>>
| 0..1 +
https://w3id.org/linkml/Float[`float`]
| +++Power factor target at the AC side, at point of common coupling. The attribute shall be a positive value.+++
| _n/a_

| <<targetQpcc,`targetQpcc`>>
//| [[slots_table.targetQpcc]]<<targetQpcc,`targetQpcc`>>
| 0..1 +
xref::class/ReactivePower.adoc[`ReactivePower`]
| +++Reactive power injection target in AC grid, at point of common coupling.  Load sign convention is used, i.e. positive sign...+++
| _n/a_

| <<targetUpcc,`targetUpcc`>>
//| [[slots_table.targetUpcc]]<<targetUpcc,`targetUpcc`>>
| 0..1 +
xref::class/Voltage.adoc[`Voltage`]
| +++Voltage target in AC grid, at point of common coupling. The attribute shall be a positive value.+++
| _n/a_

| <<uv,`uv`>>
//| [[slots_table.uv]]<<uv,`uv`>>
| 0..1 +
xref::class/Voltage.adoc[`Voltage`]
| +++Line-to-line voltage on the valve side of the converter transformer. It is converter’s state variable, result from power...+++
| _n/a_

| <<DCTerminals,`DCTerminals`>>
//| [[slots_table.DCTerminals]]<<DCTerminals,`DCTerminals`>>
| 0..* +
xref::class/ACDCConverterDCTerminal.adoc[`ACDCConverterDCTerminal`]
| +++A DC converter have DC converter terminals. A converter has two DC converter terminals.+++
| xref::class/ACDCConverter.adoc[`ACDCConverter`]

| <<PccTerminal,`PccTerminal`>>
//| [[slots_table.PccTerminal]]<<PccTerminal,`PccTerminal`>>
| 0..1 +
xref::class/Terminal.adoc[`Terminal`]
| +++Point of common coupling terminal for this converter DC side. It is typically the terminal on the power transformer (or...+++
| xref::class/ACDCConverter.adoc[`ACDCConverter`]

| <<baseS,`baseS`>>
//| [[slots_table.baseS]]<<baseS,`baseS`>>
| 0..1 +
xref::class/ApparentPower.adoc[`ApparentPower`]
| +++Base apparent power of the converter pole. The attribute shall be a positive value.+++
| xref::class/ACDCConverter.adoc[`ACDCConverter`]

| <<idc,`idc`>>
//| [[slots_table.idc]]<<idc,`idc`>>
| 0..1 +
xref::class/CurrentFlow.adoc[`CurrentFlow`]
| +++Converter DC current, also called Id. It is converter’s state variable, result from power flow.+++
| xref::class/ACDCConverter.adoc[`ACDCConverter`]

| <<idleLoss,`idleLoss`>>
//| [[slots_table.idleLoss]]<<idleLoss,`idleLoss`>>
| 0..1 +
xref::class/ActivePower.adoc[`ActivePower`]
| +++Active power loss in pole at no power transfer. It is converter’s configuration data used in power flow. The attribute shall...+++
| xref::class/ACDCConverter.adoc[`ACDCConverter`]

| <<maxP,`maxP`>>
//| [[slots_table.maxP]]<<maxP,`maxP`>>
| 0..1 +
xref::class/ActivePower.adoc[`ActivePower`]
| +++Maximum active power limit. The value is overwritten by values of VsCapabilityCurve, if present.+++
| xref::class/ACDCConverter.adoc[`ACDCConverter`]

| <<maxUdc,`maxUdc`>>
//| [[slots_table.maxUdc]]<<maxUdc,`maxUdc`>>
| 0..1 +
xref::class/Voltage.adoc[`Voltage`]
| +++The maximum voltage on the DC side at which the converter should operate. It is converter’s configuration data used in power...+++
| xref::class/ACDCConverter.adoc[`ACDCConverter`]

| <<minP,`minP`>>
//| [[slots_table.minP]]<<minP,`minP`>>
| 0..1 +
xref::class/ActivePower.adoc[`ActivePower`]
| +++Minimum active power limit. The value is overwritten by values of VsCapabilityCurve, if present.+++
| xref::class/ACDCConverter.adoc[`ACDCConverter`]

| <<minUdc,`minUdc`>>
//| [[slots_table.minUdc]]<<minUdc,`minUdc`>>
| 0..1 +
xref::class/Voltage.adoc[`Voltage`]
| +++The minimum voltage on the DC side at which the converter should operate. It is converter’s configuration data used in power...+++
| xref::class/ACDCConverter.adoc[`ACDCConverter`]

| <<numberOfValves,`numberOfValves`>>
//| [[slots_table.numberOfValves]]<<numberOfValves,`numberOfValves`>>
| 0..1 +
https://w3id.org/linkml/Integer[`integer`]
| +++Number of valves in the converter. Used in loss calculations.+++
| xref::class/ACDCConverter.adoc[`ACDCConverter`]

| <<p,`p`>>
//| [[slots_table.p]]<<p,`p`>>
| 0..1 +
xref::class/ActivePower.adoc[`ActivePower`]
| +++Active power at the point of common coupling. Load sign convention is used, i.e. positive sign means flow out from a...+++
| xref::class/ACDCConverter.adoc[`ACDCConverter`]

| <<poleLossP,`poleLossP`>>
//| [[slots_table.poleLossP]]<<poleLossP,`poleLossP`>>
| 0..1 +
xref::class/ActivePower.adoc[`ActivePower`]
| +++The active power loss at a DC Pole 
= idleLoss + switchingLoss*\|Idc\| + resitiveLoss*Idc^2.
For lossless operation...+++
| xref::class/ACDCConverter.adoc[`ACDCConverter`]

| <<q,`q`>>
//| [[slots_table.q]]<<q,`q`>>
| 0..1 +
xref::class/ReactivePower.adoc[`ReactivePower`]
| +++Reactive power at the point of common coupling. Load sign convention is used, i.e. positive sign means flow out from a...+++
| xref::class/ACDCConverter.adoc[`ACDCConverter`]

| <<ratedUdc,`ratedUdc`>>
//| [[slots_table.ratedUdc]]<<ratedUdc,`ratedUdc`>>
| 0..1 +
xref::class/Voltage.adoc[`Voltage`]
| +++Rated converter DC voltage, also called UdN. The attribute shall be a positive value. It is converter’s configuration data...+++
| xref::class/ACDCConverter.adoc[`ACDCConverter`]

| <<resistiveLoss,`resistiveLoss`>>
//| [[slots_table.resistiveLoss]]<<resistiveLoss,`resistiveLoss`>>
| 0..1 +
xref::class/Resistance.adoc[`Resistance`]
| +++It is converter’s configuration data used in power flow. Refer to poleLossP. The attribute shall be a positive value.+++
| xref::class/ACDCConverter.adoc[`ACDCConverter`]

| <<switchingLoss,`switchingLoss`>>
//| [[slots_table.switchingLoss]]<<switchingLoss,`switchingLoss`>>
| 0..1 +
xref::class/ActivePowerPerCurrentFlow.adoc[`ActivePowerPerCurrentFlow`]
| +++Switching losses, relative to the base apparent power 'baseS'. Refer to poleLossP. The attribute shall be a positive value.+++
| xref::class/ACDCConverter.adoc[`ACDCConverter`]

| <<targetPpcc,`targetPpcc`>>
//| [[slots_table.targetPpcc]]<<targetPpcc,`targetPpcc`>>
| 0..1 +
xref::class/ActivePower.adoc[`ActivePower`]
| +++Real power injection target in AC grid, at point of common coupling.  Load sign convention is used, i.e. positive sign means...+++
| xref::class/ACDCConverter.adoc[`ACDCConverter`]

| <<targetUdc,`targetUdc`>>
//| [[slots_table.targetUdc]]<<targetUdc,`targetUdc`>>
| 0..1 +
xref::class/Voltage.adoc[`Voltage`]
| +++Target value for DC voltage magnitude. The attribute shall be a positive value.+++
| xref::class/ACDCConverter.adoc[`ACDCConverter`]

| <<uc,`uc`>>
//| [[slots_table.uc]]<<uc,`uc`>>
| 0..1 +
xref::class/Voltage.adoc[`Voltage`]
| +++Line-to-line converter voltage, the voltage at the AC side of the valve. It is converter’s state variable, result from power...+++
| xref::class/ACDCConverter.adoc[`ACDCConverter`]

| <<udc,`udc`>>
//| [[slots_table.udc]]<<udc,`udc`>>
| 0..1 +
xref::class/Voltage.adoc[`Voltage`]
| +++Converter voltage at the DC side, also called Ud. It is converter’s state variable, result from power flow. The attribute...+++
| xref::class/ACDCConverter.adoc[`ACDCConverter`]

| <<valveU0,`valveU0`>>
//| [[slots_table.valveU0]]<<valveU0,`valveU0`>>
| 0..1 +
xref::class/Voltage.adoc[`Voltage`]
| +++Valve threshold voltage, also called Uvalve. Forward voltage drop when the valve is conducting. Used in loss calculations,...+++
| xref::class/ACDCConverter.adoc[`ACDCConverter`]

| <<BaseVoltage,`BaseVoltage`>>
//| [[slots_table.BaseVoltage]]<<BaseVoltage,`BaseVoltage`>>
| 0..1 +
xref::class/BaseVoltage.adoc[`BaseVoltage`]
| +++Base voltage of this conducting equipment.  Use only when there is no voltage level container used and only one base voltage...+++
| xref::class/ConductingEquipment.adoc[`ConductingEquipment`]

| <<GroundingAction,`GroundingAction`>>
//| [[slots_table.GroundingAction]]<<GroundingAction,`GroundingAction`>>
| 0..1 +
xref::class/GroundAction.adoc[`GroundAction`]
| +++Action involving grounding operation on this conducting equipment.+++
| xref::class/ConductingEquipment.adoc[`ConductingEquipment`]

| <<JumpingAction,`JumpingAction`>>
//| [[slots_table.JumpingAction]]<<JumpingAction,`JumpingAction`>>
| 0..1 +
xref::class/JumperAction.adoc[`JumperAction`]
| +++Jumper action involving jumping operation on this conducting equipment.+++
| xref::class/ConductingEquipment.adoc[`ConductingEquipment`]

| <<Outage,`Outage`>>
//| [[slots_table.Outage]]<<Outage,`Outage`>>
| 0..1 +
xref::class/Outage.adoc[`Outage`]
| +++The outage that is isolated by the outage isolation equipment.+++
| xref::class/ConductingEquipment.adoc[`ConductingEquipment`]

| <<ProtectionEquipments,`ProtectionEquipments`>>
//| [[slots_table.ProtectionEquipments]]<<ProtectionEquipments,`ProtectionEquipments`>>
| 0..* +
xref::class/ProtectionEquipment.adoc[`ProtectionEquipment`]
| +++Protection equipment  used to protect specific conducting equipment.+++
| xref::class/ConductingEquipment.adoc[`ConductingEquipment`]

| <<ProtectiveActionAdjustment,`ProtectiveActionAdjustment`>>
//| [[slots_table.ProtectiveActionAdjustment]]<<ProtectiveActionAdjustment,`ProtectiveActionAdjustment`>>
| 0..* +
xref::class/ProtectiveActionAdjustment.adoc[`ProtectiveActionAdjustment`]
| +++The operating condition to the Conducting Equipment is changed when protective action adjustment is activated. For...+++
| xref::class/ConductingEquipment.adoc[`ConductingEquipment`]

| <<SvStatus,`SvStatus`>>
//| [[slots_table.SvStatus]]<<SvStatus,`SvStatus`>>
| 0..* +
xref::class/SvStatus.adoc[`SvStatus`]
| +++The status state variable associated with this conducting equipment.+++
| xref::class/ConductingEquipment.adoc[`ConductingEquipment`]

| <<Terminals,`Terminals`>>
//| [[slots_table.Terminals]]<<Terminals,`Terminals`>>
| 0..* +
xref::class/Terminal.adoc[`Terminal`]
| +++Conducting equipment have terminals that may be connected to other conducting equipment terminals via connectivity nodes or...+++
| xref::class/ConductingEquipment.adoc[`ConductingEquipment`]

| <<AdditionalEquipmentContainer,`AdditionalEquipmentContainer`>>
//| [[slots_table.AdditionalEquipmentContainer]]<<AdditionalEquipmentContainer,`AdditionalEquipmentContainer`>>
| 0..* +
xref::class/EquipmentContainer.adoc[`EquipmentContainer`]
| +++Additional equipment container beyond the primary equipment container.  The equipment is contained in another equipment...+++
| xref::class/Equipment.adoc[`Equipment`]

| <<ContingencyEquipment,`ContingencyEquipment`>>
//| [[slots_table.ContingencyEquipment]]<<ContingencyEquipment,`ContingencyEquipment`>>
| 0..* +
xref::class/ContingencyEquipment.adoc[`ContingencyEquipment`]
| +++The contingency equipments in which this equipment participates.+++
| xref::class/Equipment.adoc[`Equipment`]

| <<EqiupmentLimitSeriesComponent,`EqiupmentLimitSeriesComponent`>>
//| [[slots_table.EqiupmentLimitSeriesComponent]]<<EqiupmentLimitSeriesComponent,`EqiupmentLimitSeriesComponent`>>
| 0..* +
xref::class/EquipmentLimitSeriesComponent.adoc[`EquipmentLimitSeriesComponent`]
| +++Equipment limit series calculation component to which this equipment contributes.+++
| xref::class/Equipment.adoc[`Equipment`]

| <<EquipmentContainer,`EquipmentContainer`>>
//| [[slots_table.EquipmentContainer]]<<EquipmentContainer,`EquipmentContainer`>>
| 0..1 +
xref::class/EquipmentContainer.adoc[`EquipmentContainer`]
| +++Container of this equipment.+++
| xref::class/Equipment.adoc[`Equipment`]

| <<EquipmentUnavailabilitySchedule,`EquipmentUnavailabilitySchedule`>>
//| [[slots_table.EquipmentUnavailabilitySchedule]]<<EquipmentUnavailabilitySchedule,`EquipmentUnavailabilitySchedule`>>
| 0..* +
xref::class/EquipmentUnavailabilitySchedule.adoc[`EquipmentUnavailabilitySchedule`]
| _n/a_
| xref::class/Equipment.adoc[`Equipment`]

| <<Faults,`Faults`>>
//| [[slots_table.Faults]]<<Faults,`Faults`>>
| 0..* +
xref::class/Fault.adoc[`Fault`]
| +++All faults on this equipment.+++
| xref::class/Equipment.adoc[`Equipment`]

| <<LimitDependencyModel,`LimitDependencyModel`>>
//| [[slots_table.LimitDependencyModel]]<<LimitDependencyModel,`LimitDependencyModel`>>
| 0..* +
xref::class/LimitDependency.adoc[`LimitDependency`]
| +++Limit dependencymodels organized under this equipment as a means for organizing the model in a tree view.+++
| xref::class/Equipment.adoc[`Equipment`]

| <<OperationalLimitSet,`OperationalLimitSet`>>
//| [[slots_table.OperationalLimitSet]]<<OperationalLimitSet,`OperationalLimitSet`>>
| 0..* +
xref::class/OperationalLimitSet.adoc[`OperationalLimitSet`]
| +++The operational limit sets associated with this equipment.+++
| xref::class/Equipment.adoc[`Equipment`]

| <<OperationalRestrictions,`OperationalRestrictions`>>
//| [[slots_table.OperationalRestrictions]]<<OperationalRestrictions,`OperationalRestrictions`>>
| 0..* +
xref::class/OperationalRestriction.adoc[`OperationalRestriction`]
| +++All operational restrictions for this equipment.+++
| xref::class/Equipment.adoc[`Equipment`]

| <<Outages,`Outages`>>
//| [[slots_table.Outages]]<<Outages,`Outages`>>
| 0..* +
xref::class/Outage.adoc[`Outage`]
| +++All outages in which this equipment is involved.+++
| xref::class/Equipment.adoc[`Equipment`]

| <<PinEquipment,`PinEquipment`>>
//| [[slots_table.PinEquipment]]<<PinEquipment,`PinEquipment`>>
| 0..* +
xref::class/PinEquipment.adoc[`PinEquipment`]
| _n/a_
| xref::class/Equipment.adoc[`Equipment`]

| <<ProtectiveActionEquipment,`ProtectiveActionEquipment`>>
//| [[slots_table.ProtectiveActionEquipment]]<<ProtectiveActionEquipment,`ProtectiveActionEquipment`>>
| 0..* +
xref::class/ProtectiveActionEquipment.adoc[`ProtectiveActionEquipment`]
| +++Protective action is controlling equipment. This can be direct signals from the control center, or emulation of action done...+++
| xref::class/Equipment.adoc[`Equipment`]

| <<UsagePoints,`UsagePoints`>>
//| [[slots_table.UsagePoints]]<<UsagePoints,`UsagePoints`>>
| 0..* +
xref::class/UsagePoint.adoc[`UsagePoint`]
| +++All usage points connected to the electrical grid through this equipment.+++
| xref::class/Equipment.adoc[`Equipment`]

| <<WeatherStation,`WeatherStation`>>
//| [[slots_table.WeatherStation]]<<WeatherStation,`WeatherStation`>>
| 0..* +
xref::class/WeatherStation.adoc[`WeatherStation`]
| _n/a_
| xref::class/Equipment.adoc[`Equipment`]

| <<aggregate,`aggregate`>>
//| [[slots_table.aggregate]]<<aggregate,`aggregate`>>
| 0..1 +
https://w3id.org/linkml/Boolean[`boolean`]
| +++The aggregate flag provides an alternative way of representing an aggregated (equivalent) element. It is applicable in cases...+++
| xref::class/Equipment.adoc[`Equipment`]

| <<inService,`inService`>>
//| [[slots_table.inService]]<<inService,`inService`>>
| 0..1 +
https://w3id.org/linkml/Boolean[`boolean`]
| +++Specifies the availability of the equipment. True means the equipment is available for topology processing, which determines...+++
| xref::class/Equipment.adoc[`Equipment`]

| <<networkAnalysisEnabled,`networkAnalysisEnabled`>>
//| [[slots_table.networkAnalysisEnabled]]<<networkAnalysisEnabled,`networkAnalysisEnabled`>>
| 0..1 +
https://w3id.org/linkml/Boolean[`boolean`]
| +++The equipment is enabled to participate in network analysis.  If unspecified, the value is assumed to be true.+++
| xref::class/Equipment.adoc[`Equipment`]

| <<normallyInService,`normallyInService`>>
//| [[slots_table.normallyInService]]<<normallyInService,`normallyInService`>>
| 0..1 +
https://w3id.org/linkml/Boolean[`boolean`]
| +++Specifies the availability of the equipment under normal operating conditions. True means the equipment is available for...+++
| xref::class/Equipment.adoc[`Equipment`]

| <<AssetDatasheet,`AssetDatasheet`>>
//| [[slots_table.AssetDatasheet]]<<AssetDatasheet,`AssetDatasheet`>>
| 0..1 +
xref::class/AssetInfo.adoc[`AssetInfo`]
| +++Datasheet information for this power system resource.+++
| xref::class/PowerSystemResource.adoc[`PowerSystemResource`]

| <<Assets,`Assets`>>
//| [[slots_table.Assets]]<<Assets,`Assets`>>
| 0..* +
xref::class/Asset.adoc[`Asset`]
| +++All assets represented by this power system resource. For example, multiple conductor assets are electrically modelled as a...+++
| xref::class/PowerSystemResource.adoc[`PowerSystemResource`]

| <<Clearances,`Clearances`>>
//| [[slots_table.Clearances]]<<Clearances,`Clearances`>>
| 0..* +
xref::class/ClearanceDocument.adoc[`ClearanceDocument`]
| +++All clearances applicable to this power system resource.+++
| xref::class/PowerSystemResource.adoc[`PowerSystemResource`]

| <<ConfigurationEvent,`ConfigurationEvent`>>
//| [[slots_table.ConfigurationEvent]]<<ConfigurationEvent,`ConfigurationEvent`>>
| 0..* +
xref::class/ConfigurationEvent.adoc[`ConfigurationEvent`]
| +++All configuration events created for this Power System resource.+++
| xref::class/PowerSystemResource.adoc[`PowerSystemResource`]

| <<Controls,`Controls`>>
//| [[slots_table.Controls]]<<Controls,`Controls`>>
| 0..* +
xref::class/Control.adoc[`Control`]
| +++The controller outputs used to actually govern a regulating device, e.g. the magnetization of a synchronous machine or...+++
| xref::class/PowerSystemResource.adoc[`PowerSystemResource`]

| <<GenericAction,`GenericAction`>>
//| [[slots_table.GenericAction]]<<GenericAction,`GenericAction`>>
| 0..* +
xref::class/GenericAction.adoc[`GenericAction`]
| +++The generic action that is performed on the power system resource+++
| xref::class/PowerSystemResource.adoc[`PowerSystemResource`]

| <<Location,`Location`>>
//| [[slots_table.Location]]<<Location,`Location`>>
| 0..1 +
xref::class/Location.adoc[`Location`]
| +++Location of this power system resource.+++
| xref::class/PowerSystemResource.adoc[`PowerSystemResource`]

| <<Measurements,`Measurements`>>
//| [[slots_table.Measurements]]<<Measurements,`Measurements`>>
| 0..* +
xref::class/Measurement.adoc[`Measurement`]
| +++The measurements associated with this power system resource.+++
| xref::class/PowerSystemResource.adoc[`PowerSystemResource`]

| <<OperatingShare,`OperatingShare`>>
//| [[slots_table.OperatingShare]]<<OperatingShare,`OperatingShare`>>
| 0..* +
xref::class/OperatingShare.adoc[`OperatingShare`]
| +++The operating shares of this power system resource.+++
| xref::class/PowerSystemResource.adoc[`PowerSystemResource`]

| <<OperationalTags,`OperationalTags`>>
//| [[slots_table.OperationalTags]]<<OperationalTags,`OperationalTags`>>
| 0..* +
xref::class/OperationalTag.adoc[`OperationalTag`]
| +++All operational tags placed on this power system resource.+++
| xref::class/PowerSystemResource.adoc[`PowerSystemResource`]

| <<PSREvents,`PSREvents`>>
//| [[slots_table.PSREvents]]<<PSREvents,`PSREvents`>>
| 0..* +
xref::class/PSREvent.adoc[`PSREvent`]
| +++All events associated with this power system resource.+++
| xref::class/PowerSystemResource.adoc[`PowerSystemResource`]

| <<PSRType,`PSRType`>>
//| [[slots_table.PSRType]]<<PSRType,`PSRType`>>
| 0..1 +
xref::class/PSRType.adoc[`PSRType`]
| +++Custom classification for this power system resource.+++
| xref::class/PowerSystemResource.adoc[`PowerSystemResource`]

| <<ReportingGroup,`ReportingGroup`>>
//| [[slots_table.ReportingGroup]]<<ReportingGroup,`ReportingGroup`>>
| 0..* +
xref::class/ReportingGroup.adoc[`ReportingGroup`]
| +++Reporting groups to which this power system resource belongs.+++
| xref::class/PowerSystemResource.adoc[`PowerSystemResource`]

| <<VerificationAction,`VerificationAction`>>
//| [[slots_table.VerificationAction]]<<VerificationAction,`VerificationAction`>>
| 0..* +
xref::class/VerificationAction.adoc[`VerificationAction`]
| +++The verification action that is performed on the power system resource+++
| xref::class/PowerSystemResource.adoc[`PowerSystemResource`]

| <<DiagramObjects,`DiagramObjects`>>
//| [[slots_table.DiagramObjects]]<<DiagramObjects,`DiagramObjects`>>
| 0..* +
xref::class/DiagramObject.adoc[`DiagramObject`]
| +++The diagram objects that are associated with the domain object.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<InstanceSet,`InstanceSet`>>
//| [[slots_table.InstanceSet]]<<InstanceSet,`InstanceSet`>>
| 1 +
xref::class/InstanceSet.adoc[`InstanceSet`]
| +++Dataset containing the data objects.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<Names,`Names`>>
//| [[slots_table.Names]]<<Names,`Names`>>
| 0..* +
xref::class/Name.adoc[`Name`]
| +++All names of this identified object.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<PropertiesCIMDataObject,`PropertiesCIMDataObject`>>
//| [[slots_table.PropertiesCIMDataObject]]<<PropertiesCIMDataObject,`PropertiesCIMDataObject`>>
| 0..1 +
xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++The single CIM data object in the appropriate dataset context.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<TargetingCIMDataObject,`TargetingCIMDataObject`>>
//| [[slots_table.TargetingCIMDataObject]]<<TargetingCIMDataObject,`TargetingCIMDataObject`>>
| 0..* +
xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++Data objects registered.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<aliasName,`aliasName`>>
//| [[slots_table.aliasName]]<<aliasName,`aliasName`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and...+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<description,`description`>>
//| [[slots_table.description]]<<description,`description`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to...+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<mRID,`mRID`>>
//| [[slots_table.mRID]]<<mRID,`mRID`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is...+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<name,`name`>>
//| [[slots_table.name]]<<name,`name`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++The name is any free human readable and possibly non unique text naming the object.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]
|===

'''


//[discrete]
[#AdditionalEquipmentContainer]
=== `AdditionalEquipmentContainer`
+++Additional equipment container beyond the primary equipment container.  The equipment is contained in another equipment container, but also grouped with this equipment container.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:Equipment.AdditionalEquipmentContainer`
| Cardinality
| 0..*
| Type
| xref::class/EquipmentContainer.adoc[`EquipmentContainer`]

| Inherited from
| xref::class/Equipment.adoc[`Equipment`]


|===

////
[.text-left]
--
<<slots_table.AdditionalEquipmentContainer,&#10548;>>
--
////


//[discrete]
[#aggregate]
=== `aggregate`
+++The aggregate flag provides an alternative way of representing an aggregated (equivalent) element. It is applicable in cases when the dedicated classes for equivalent equipment do not have all of the attributes necessary to represent the required level of detail.  In case the flag is set to “true” the single instance of equipment represents multiple pieces of equipment that have been modelled together as an aggregate equivalent obtained by a network reduction procedure. Examples would be power transformers or synchronous machines operating in parallel modelled as a single aggregate power transformer or aggregate synchronous machine.  
The attribute is not used for EquivalentBranch, EquivalentShunt and EquivalentInjection.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:Equipment.aggregate`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Boolean[`boolean`]

| Inherited from
| xref::class/Equipment.adoc[`Equipment`]


|===

////
[.text-left]
--
<<slots_table.aggregate,&#10548;>>
--
////


//[discrete]
[#aliasName]
=== `aliasName`
+++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and may not correlate to a naming hierarchy.
The attribute aliasName is retained because of backwards compatibility between CIM relases. It is however recommended to replace aliasName with the Name class as aliasName is planned for retirement at a future time.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.aliasName`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.aliasName,&#10548;>>
--
////


//[discrete]
[#AssetDatasheet]
=== `AssetDatasheet`
+++Datasheet information for this power system resource.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:PowerSystemResource.AssetDatasheet`
| Cardinality
| 0..1
| Type
| xref::class/AssetInfo.adoc[`AssetInfo`]

| Inherited from
| xref::class/PowerSystemResource.adoc[`PowerSystemResource`]


|===

////
[.text-left]
--
<<slots_table.AssetDatasheet,&#10548;>>
--
////


//[discrete]
[#Assets]
=== `Assets`
+++All assets represented by this power system resource. For example, multiple conductor assets are electrically modelled as a single AC line segment.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:PowerSystemResource.Assets`
| Cardinality
| 0..*
| Type
| xref::class/Asset.adoc[`Asset`]

| Inherited from
| xref::class/PowerSystemResource.adoc[`PowerSystemResource`]


|===

////
[.text-left]
--
<<slots_table.Assets,&#10548;>>
--
////


//[discrete]
[#baseS]
=== `baseS`
+++Base apparent power of the converter pole. The attribute shall be a positive value.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:ACDCConverter.baseS`
| Cardinality
| 0..1
| Type
| xref::class/ApparentPower.adoc[`ApparentPower`]

| Inherited from
| xref::class/ACDCConverter.adoc[`ACDCConverter`]


|===

////
[.text-left]
--
<<slots_table.baseS,&#10548;>>
--
////


//[discrete]
[#BaseVoltage]
=== `BaseVoltage`
+++Base voltage of this conducting equipment.  Use only when there is no voltage level container used and only one base voltage applies.  For example, not used for transformers.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:ConductingEquipment.BaseVoltage`
| Cardinality
| 0..1
| Type
| xref::class/BaseVoltage.adoc[`BaseVoltage`]

| Inherited from
| xref::class/ConductingEquipment.adoc[`ConductingEquipment`]


|===

////
[.text-left]
--
<<slots_table.BaseVoltage,&#10548;>>
--
////


//[discrete]
[#CapabilityCurve]
=== `CapabilityCurve`
+++Capability curve of this converter.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:VsConverter.CapabilityCurve`
| Cardinality
| 0..1
| Type
| xref::class/VsCapabilityCurve.adoc[`VsCapabilityCurve`]


|===

////
[.text-left]
--
<<slots_table.CapabilityCurve,&#10548;>>
--
////


//[discrete]
[#Clearances]
=== `Clearances`
+++All clearances applicable to this power system resource.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:PowerSystemResource.Clearances`
| Cardinality
| 0..*
| Type
| xref::class/ClearanceDocument.adoc[`ClearanceDocument`]

| Inherited from
| xref::class/PowerSystemResource.adoc[`PowerSystemResource`]


|===

////
[.text-left]
--
<<slots_table.Clearances,&#10548;>>
--
////


//[discrete]
[#ConfigurationEvent]
=== `ConfigurationEvent`
+++All configuration events created for this Power System resource.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:PowerSystemResource.ConfigurationEvent`
| Cardinality
| 0..*
| Type
| xref::class/ConfigurationEvent.adoc[`ConfigurationEvent`]

| Inherited from
| xref::class/PowerSystemResource.adoc[`PowerSystemResource`]


|===

////
[.text-left]
--
<<slots_table.ConfigurationEvent,&#10548;>>
--
////


//[discrete]
[#ContingencyEquipment]
=== `ContingencyEquipment`
+++The contingency equipments in which this equipment participates.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:Equipment.ContingencyEquipment`
| Cardinality
| 0..*
| Type
| xref::class/ContingencyEquipment.adoc[`ContingencyEquipment`]

| Inherited from
| xref::class/Equipment.adoc[`Equipment`]


|===

////
[.text-left]
--
<<slots_table.ContingencyEquipment,&#10548;>>
--
////


//[discrete]
[#Controls]
=== `Controls`
+++The controller outputs used to actually govern a regulating device, e.g. the magnetization of a synchronous machine or capacitor bank breaker actuator.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:PowerSystemResource.Controls`
| Cardinality
| 0..*
| Type
| xref::class/Control.adoc[`Control`]

| Inherited from
| xref::class/PowerSystemResource.adoc[`PowerSystemResource`]


|===

////
[.text-left]
--
<<slots_table.Controls,&#10548;>>
--
////


//[discrete]
[#DCTerminals]
=== `DCTerminals`
+++A DC converter have DC converter terminals. A converter has two DC converter terminals.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:ACDCConverter.DCTerminals`
| Cardinality
| 0..*
| Type
| xref::class/ACDCConverterDCTerminal.adoc[`ACDCConverterDCTerminal`]

| Inherited from
| xref::class/ACDCConverter.adoc[`ACDCConverter`]


|===

////
[.text-left]
--
<<slots_table.DCTerminals,&#10548;>>
--
////


//[discrete]
[#delta]
=== `delta`
+++Angle between VsConverter.uv and ACDCConverter.uc. It is converter’s state variable used in power flow. The attribute shall be a positive value or zero.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:VsConverter.delta`
| Cardinality
| 0..1
| Type
| xref::class/AngleDegrees.adoc[`AngleDegrees`]


|===

////
[.text-left]
--
<<slots_table.delta,&#10548;>>
--
////


//[discrete]
[#description]
=== `description`
+++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to a naming hierarchy.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.description`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.description,&#10548;>>
--
////


//[discrete]
[#DiagramObjects]
=== `DiagramObjects`
+++The diagram objects that are associated with the domain object.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.DiagramObjects`
| Cardinality
| 0..*
| Type
| xref::class/DiagramObject.adoc[`DiagramObject`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.DiagramObjects,&#10548;>>
--
////


//[discrete]
[#droop]
=== `droop`
+++Droop constant. The pu value is obtained as D [kV/MW] x Sb / Ubdc. The attribute shall be a positive value.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:VsConverter.droop`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.droop,&#10548;>>
--
////


//[discrete]
[#droopCompensation]
=== `droopCompensation`
+++Compensation constant. Used to compensate for voltage drop when controlling voltage at a distant bus. The attribute shall be a positive value.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:VsConverter.droopCompensation`
| Cardinality
| 0..1
| Type
| xref::class/Resistance.adoc[`Resistance`]


|===

////
[.text-left]
--
<<slots_table.droopCompensation,&#10548;>>
--
////


//[discrete]
[#EqiupmentLimitSeriesComponent]
=== `EqiupmentLimitSeriesComponent`
+++Equipment limit series calculation component to which this equipment contributes.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:Equipment.EqiupmentLimitSeriesComponent`
| Cardinality
| 0..*
| Type
| xref::class/EquipmentLimitSeriesComponent.adoc[`EquipmentLimitSeriesComponent`]

| Inherited from
| xref::class/Equipment.adoc[`Equipment`]


|===

////
[.text-left]
--
<<slots_table.EqiupmentLimitSeriesComponent,&#10548;>>
--
////


//[discrete]
[#EquipmentContainer]
=== `EquipmentContainer`
+++Container of this equipment.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:Equipment.EquipmentContainer`
| Cardinality
| 0..1
| Type
| xref::class/EquipmentContainer.adoc[`EquipmentContainer`]

| Inherited from
| xref::class/Equipment.adoc[`Equipment`]


|===

////
[.text-left]
--
<<slots_table.EquipmentContainer,&#10548;>>
--
////


//[discrete]
[#EquipmentUnavailabilitySchedule]
=== `EquipmentUnavailabilitySchedule`



[cols="h,4",width=65%]
|===
| URI
| `cim:Equipment.EquipmentUnavailabilitySchedule`
| Cardinality
| 0..*
| Type
| xref::class/EquipmentUnavailabilitySchedule.adoc[`EquipmentUnavailabilitySchedule`]

| Inherited from
| xref::class/Equipment.adoc[`Equipment`]


|===

////
[.text-left]
--
<<slots_table.EquipmentUnavailabilitySchedule,&#10548;>>
--
////


//[discrete]
[#Faults]
=== `Faults`
+++All faults on this equipment.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:Equipment.Faults`
| Cardinality
| 0..*
| Type
| xref::class/Fault.adoc[`Fault`]

| Inherited from
| xref::class/Equipment.adoc[`Equipment`]


|===

////
[.text-left]
--
<<slots_table.Faults,&#10548;>>
--
////


//[discrete]
[#GenericAction]
=== `GenericAction`
+++The generic action that is performed on the power system resource+++


[cols="h,4",width=65%]
|===
| URI
| `cim:PowerSystemResource.GenericAction`
| Cardinality
| 0..*
| Type
| xref::class/GenericAction.adoc[`GenericAction`]

| Inherited from
| xref::class/PowerSystemResource.adoc[`PowerSystemResource`]


|===

////
[.text-left]
--
<<slots_table.GenericAction,&#10548;>>
--
////


//[discrete]
[#GroundingAction]
=== `GroundingAction`
+++Action involving grounding operation on this conducting equipment.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:ConductingEquipment.GroundingAction`
| Cardinality
| 0..1
| Type
| xref::class/GroundAction.adoc[`GroundAction`]

| Inherited from
| xref::class/ConductingEquipment.adoc[`ConductingEquipment`]


|===

////
[.text-left]
--
<<slots_table.GroundingAction,&#10548;>>
--
////


//[discrete]
[#idc]
=== `idc`
+++Converter DC current, also called Id. It is converter’s state variable, result from power flow.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:ACDCConverter.idc`
| Cardinality
| 0..1
| Type
| xref::class/CurrentFlow.adoc[`CurrentFlow`]

| Inherited from
| xref::class/ACDCConverter.adoc[`ACDCConverter`]


|===

////
[.text-left]
--
<<slots_table.idc,&#10548;>>
--
////


//[discrete]
[#idleLoss]
=== `idleLoss`
+++Active power loss in pole at no power transfer. It is converter’s configuration data used in power flow. The attribute shall be a positive value.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:ACDCConverter.idleLoss`
| Cardinality
| 0..1
| Type
| xref::class/ActivePower.adoc[`ActivePower`]

| Inherited from
| xref::class/ACDCConverter.adoc[`ACDCConverter`]


|===

////
[.text-left]
--
<<slots_table.idleLoss,&#10548;>>
--
////


//[discrete]
[#inService]
=== `inService`
+++Specifies the availability of the equipment. True means the equipment is available for topology processing, which determines if the equipment is energized or not. False means that the equipment is treated by network applications as if it is not in the model.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:Equipment.inService`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Boolean[`boolean`]

| Inherited from
| xref::class/Equipment.adoc[`Equipment`]


|===

////
[.text-left]
--
<<slots_table.inService,&#10548;>>
--
////


//[discrete]
[#InstanceSet]
=== `InstanceSet`
+++Dataset containing the data objects.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.InstanceSet`
| Cardinality
| 1
| Type
| xref::class/InstanceSet.adoc[`InstanceSet`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.InstanceSet,&#10548;>>
--
////


//[discrete]
[#JumpingAction]
=== `JumpingAction`
+++Jumper action involving jumping operation on this conducting equipment.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:ConductingEquipment.JumpingAction`
| Cardinality
| 0..1
| Type
| xref::class/JumperAction.adoc[`JumperAction`]

| Inherited from
| xref::class/ConductingEquipment.adoc[`ConductingEquipment`]


|===

////
[.text-left]
--
<<slots_table.JumpingAction,&#10548;>>
--
////


//[discrete]
[#LimitDependencyModel]
=== `LimitDependencyModel`
+++Limit dependencymodels organized under this equipment as a means for organizing the model in a tree view.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:Equipment.LimitDependencyModel`
| Cardinality
| 0..*
| Type
| xref::class/LimitDependency.adoc[`LimitDependency`]

| Inherited from
| xref::class/Equipment.adoc[`Equipment`]


|===

////
[.text-left]
--
<<slots_table.LimitDependencyModel,&#10548;>>
--
////


//[discrete]
[#Location]
=== `Location`
+++Location of this power system resource.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:PowerSystemResource.Location`
| Cardinality
| 0..1
| Type
| xref::class/Location.adoc[`Location`]

| Inherited from
| xref::class/PowerSystemResource.adoc[`PowerSystemResource`]


|===

////
[.text-left]
--
<<slots_table.Location,&#10548;>>
--
////


//[discrete]
[#maxModulationIndex]
=== `maxModulationIndex`
+++The maximum quotient between the AC converter voltage (Uc) and DC voltage (Ud). A factor typically less than 1. It is converter’s configuration data used in power flow.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:VsConverter.maxModulationIndex`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Float[`float`]


|===

////
[.text-left]
--
<<slots_table.maxModulationIndex,&#10548;>>
--
////


//[discrete]
[#maxP]
=== `maxP`
+++Maximum active power limit. The value is overwritten by values of VsCapabilityCurve, if present.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:ACDCConverter.maxP`
| Cardinality
| 0..1
| Type
| xref::class/ActivePower.adoc[`ActivePower`]

| Inherited from
| xref::class/ACDCConverter.adoc[`ACDCConverter`]


|===

////
[.text-left]
--
<<slots_table.maxP,&#10548;>>
--
////


//[discrete]
[#maxUdc]
=== `maxUdc`
+++The maximum voltage on the DC side at which the converter should operate. It is converter’s configuration data used in power flow. The attribute shall be a positive value.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:ACDCConverter.maxUdc`
| Cardinality
| 0..1
| Type
| xref::class/Voltage.adoc[`Voltage`]

| Inherited from
| xref::class/ACDCConverter.adoc[`ACDCConverter`]


|===

////
[.text-left]
--
<<slots_table.maxUdc,&#10548;>>
--
////


//[discrete]
[#maxValveCurrent]
=== `maxValveCurrent`
+++The maximum current through a valve. It is converter’s configuration data.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:VsConverter.maxValveCurrent`
| Cardinality
| 0..1
| Type
| xref::class/CurrentFlow.adoc[`CurrentFlow`]


|===

////
[.text-left]
--
<<slots_table.maxValveCurrent,&#10548;>>
--
////


//[discrete]
[#Measurements]
=== `Measurements`
+++The measurements associated with this power system resource.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:PowerSystemResource.Measurements`
| Cardinality
| 0..*
| Type
| xref::class/Measurement.adoc[`Measurement`]

| Inherited from
| xref::class/PowerSystemResource.adoc[`PowerSystemResource`]


|===

////
[.text-left]
--
<<slots_table.Measurements,&#10548;>>
--
////


//[discrete]
[#minP]
=== `minP`
+++Minimum active power limit. The value is overwritten by values of VsCapabilityCurve, if present.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:ACDCConverter.minP`
| Cardinality
| 0..1
| Type
| xref::class/ActivePower.adoc[`ActivePower`]

| Inherited from
| xref::class/ACDCConverter.adoc[`ACDCConverter`]


|===

////
[.text-left]
--
<<slots_table.minP,&#10548;>>
--
////


//[discrete]
[#minUdc]
=== `minUdc`
+++The minimum voltage on the DC side at which the converter should operate. It is converter’s configuration data used in power flow. The attribute shall be a positive value.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:ACDCConverter.minUdc`
| Cardinality
| 0..1
| Type
| xref::class/Voltage.adoc[`Voltage`]

| Inherited from
| xref::class/ACDCConverter.adoc[`ACDCConverter`]


|===

////
[.text-left]
--
<<slots_table.minUdc,&#10548;>>
--
////


//[discrete]
[#mRID]
=== `mRID`
+++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is easily achieved by using a UUID, as specified in RFC 4122, for the mRID. The use of UUID is strongly recommended.
For CIMXML data files in RDF syntax conforming to IEC 61970-552, the mRID is mapped to rdf:ID or rdf:about attributes that identify CIM object elements.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.mRID`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.mRID,&#10548;>>
--
////


//[discrete]
[#name]
=== `name`
+++The name is any free human readable and possibly non unique text naming the object.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.name`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.name,&#10548;>>
--
////


//[discrete]
[#Names]
=== `Names`
+++All names of this identified object.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.Names`
| Cardinality
| 0..*
| Type
| xref::class/Name.adoc[`Name`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.Names,&#10548;>>
--
////


//[discrete]
[#networkAnalysisEnabled]
=== `networkAnalysisEnabled`
+++The equipment is enabled to participate in network analysis.  If unspecified, the value is assumed to be true.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:Equipment.networkAnalysisEnabled`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Boolean[`boolean`]

| Inherited from
| xref::class/Equipment.adoc[`Equipment`]


|===

////
[.text-left]
--
<<slots_table.networkAnalysisEnabled,&#10548;>>
--
////


//[discrete]
[#normallyInService]
=== `normallyInService`
+++Specifies the availability of the equipment under normal operating conditions. True means the equipment is available for topology processing, which determines if the equipment is energized or not. False means that the equipment is treated by network applications as if it is not in the model.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:Equipment.normallyInService`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Boolean[`boolean`]

| Inherited from
| xref::class/Equipment.adoc[`Equipment`]


|===

////
[.text-left]
--
<<slots_table.normallyInService,&#10548;>>
--
////


//[discrete]
[#numberOfValves]
=== `numberOfValves`
+++Number of valves in the converter. Used in loss calculations.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:ACDCConverter.numberOfValves`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Integer[`integer`]

| Inherited from
| xref::class/ACDCConverter.adoc[`ACDCConverter`]


|===

////
[.text-left]
--
<<slots_table.numberOfValves,&#10548;>>
--
////


//[discrete]
[#OperatingShare]
=== `OperatingShare`
+++The operating shares of this power system resource.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:PowerSystemResource.OperatingShare`
| Cardinality
| 0..*
| Type
| xref::class/OperatingShare.adoc[`OperatingShare`]

| Inherited from
| xref::class/PowerSystemResource.adoc[`PowerSystemResource`]


|===

////
[.text-left]
--
<<slots_table.OperatingShare,&#10548;>>
--
////


//[discrete]
[#OperationalLimitSet]
=== `OperationalLimitSet`
+++The operational limit sets associated with this equipment.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:Equipment.OperationalLimitSet`
| Cardinality
| 0..*
| Type
| xref::class/OperationalLimitSet.adoc[`OperationalLimitSet`]

| Inherited from
| xref::class/Equipment.adoc[`Equipment`]


|===

////
[.text-left]
--
<<slots_table.OperationalLimitSet,&#10548;>>
--
////


//[discrete]
[#OperationalRestrictions]
=== `OperationalRestrictions`
+++All operational restrictions for this equipment.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:Equipment.OperationalRestrictions`
| Cardinality
| 0..*
| Type
| xref::class/OperationalRestriction.adoc[`OperationalRestriction`]

| Inherited from
| xref::class/Equipment.adoc[`Equipment`]


|===

////
[.text-left]
--
<<slots_table.OperationalRestrictions,&#10548;>>
--
////


//[discrete]
[#OperationalTags]
=== `OperationalTags`
+++All operational tags placed on this power system resource.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:PowerSystemResource.OperationalTags`
| Cardinality
| 0..*
| Type
| xref::class/OperationalTag.adoc[`OperationalTag`]

| Inherited from
| xref::class/PowerSystemResource.adoc[`PowerSystemResource`]


|===

////
[.text-left]
--
<<slots_table.OperationalTags,&#10548;>>
--
////


//[discrete]
[#Outage]
=== `Outage`
+++The outage that is isolated by the outage isolation equipment.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:ConductingEquipment.Outage`
| Cardinality
| 0..1
| Type
| xref::class/Outage.adoc[`Outage`]

| Inherited from
| xref::class/ConductingEquipment.adoc[`ConductingEquipment`]


|===

////
[.text-left]
--
<<slots_table.Outage,&#10548;>>
--
////


//[discrete]
[#Outages]
=== `Outages`
+++All outages in which this equipment is involved.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:Equipment.Outages`
| Cardinality
| 0..*
| Type
| xref::class/Outage.adoc[`Outage`]

| Inherited from
| xref::class/Equipment.adoc[`Equipment`]


|===

////
[.text-left]
--
<<slots_table.Outages,&#10548;>>
--
////


//[discrete]
[#p]
=== `p`
+++Active power at the point of common coupling. Load sign convention is used, i.e. positive sign means flow out from a node.
Starting value for a steady state solution in the case a simplified power flow model is used.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:ACDCConverter.p`
| Cardinality
| 0..1
| Type
| xref::class/ActivePower.adoc[`ActivePower`]

| Inherited from
| xref::class/ACDCConverter.adoc[`ACDCConverter`]


|===

////
[.text-left]
--
<<slots_table.p,&#10548;>>
--
////


//[discrete]
[#PccTerminal]
=== `PccTerminal`
+++Point of common coupling terminal for this converter DC side. It is typically the terminal on the power transformer (or switch) closest to the AC network.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:ACDCConverter.PccTerminal`
| Cardinality
| 0..1
| Type
| xref::class/Terminal.adoc[`Terminal`]

| Inherited from
| xref::class/ACDCConverter.adoc[`ACDCConverter`]


|===

////
[.text-left]
--
<<slots_table.PccTerminal,&#10548;>>
--
////


//[discrete]
[#PinEquipment]
=== `PinEquipment`



[cols="h,4",width=65%]
|===
| URI
| `cim:Equipment.PinEquipment`
| Cardinality
| 0..*
| Type
| xref::class/PinEquipment.adoc[`PinEquipment`]

| Inherited from
| xref::class/Equipment.adoc[`Equipment`]


|===

////
[.text-left]
--
<<slots_table.PinEquipment,&#10548;>>
--
////


//[discrete]
[#poleLossP]
=== `poleLossP`
+++The active power loss at a DC Pole 
= idleLoss + switchingLoss*|Idc| + resitiveLoss*Idc^2.
For lossless operation Pdc=Pac.
For rectifier operation with losses Pdc=Pac-lossP.
For inverter operation with losses Pdc=Pac+lossP.
It is converter’s state variable used in power flow. The attribute shall be a positive value.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:ACDCConverter.poleLossP`
| Cardinality
| 0..1
| Type
| xref::class/ActivePower.adoc[`ActivePower`]

| Inherited from
| xref::class/ACDCConverter.adoc[`ACDCConverter`]


|===

////
[.text-left]
--
<<slots_table.poleLossP,&#10548;>>
--
////


//[discrete]
[#pPccControl]
=== `pPccControl`
+++Kind of control of real power and/or DC voltage.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:VsConverter.pPccControl`
| Cardinality
| 0..1
| Type
| xref::enumeration/VsPpccControlKind.adoc[`VsPpccControlKind`]


|===

////
[.text-left]
--
<<slots_table.pPccControl,&#10548;>>
--
////


//[discrete]
[#PropertiesCIMDataObject]
=== `PropertiesCIMDataObject`
+++The single CIM data object in the appropriate dataset context.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.PropertiesCIMDataObject`
| Cardinality
| 0..1
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.PropertiesCIMDataObject,&#10548;>>
--
////


//[discrete]
[#ProtectionEquipments]
=== `ProtectionEquipments`
+++Protection equipment  used to protect specific conducting equipment.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:ConductingEquipment.ProtectionEquipments`
| Cardinality
| 0..*
| Type
| xref::class/ProtectionEquipment.adoc[`ProtectionEquipment`]

| Inherited from
| xref::class/ConductingEquipment.adoc[`ConductingEquipment`]


|===

////
[.text-left]
--
<<slots_table.ProtectionEquipments,&#10548;>>
--
////


//[discrete]
[#ProtectiveActionAdjustment]
=== `ProtectiveActionAdjustment`
+++The operating condition to the Conducting Equipment is changed when protective action adjustment is activated. For ShuntCompensator or other conducting equipment that operates on discrete values (integer), the values given in float will be rounded.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:ConductingEquipment.ProtectiveActionAdjustment`
| Cardinality
| 0..*
| Type
| xref::class/ProtectiveActionAdjustment.adoc[`ProtectiveActionAdjustment`]

| Inherited from
| xref::class/ConductingEquipment.adoc[`ConductingEquipment`]


|===

////
[.text-left]
--
<<slots_table.ProtectiveActionAdjustment,&#10548;>>
--
////


//[discrete]
[#ProtectiveActionEquipment]
=== `ProtectiveActionEquipment`
+++Protective action is controlling equipment. This can be direct signals from the control center, or emulation of action done by protection equipment.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:Equipment.ProtectiveActionEquipment`
| Cardinality
| 0..*
| Type
| xref::class/ProtectiveActionEquipment.adoc[`ProtectiveActionEquipment`]

| Inherited from
| xref::class/Equipment.adoc[`Equipment`]


|===

////
[.text-left]
--
<<slots_table.ProtectiveActionEquipment,&#10548;>>
--
////


//[discrete]
[#PSREvents]
=== `PSREvents`
+++All events associated with this power system resource.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:PowerSystemResource.PSREvents`
| Cardinality
| 0..*
| Type
| xref::class/PSREvent.adoc[`PSREvent`]

| Inherited from
| xref::class/PowerSystemResource.adoc[`PowerSystemResource`]


|===

////
[.text-left]
--
<<slots_table.PSREvents,&#10548;>>
--
////


//[discrete]
[#PSRType]
=== `PSRType`
+++Custom classification for this power system resource.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:PowerSystemResource.PSRType`
| Cardinality
| 0..1
| Type
| xref::class/PSRType.adoc[`PSRType`]

| Inherited from
| xref::class/PowerSystemResource.adoc[`PowerSystemResource`]


|===

////
[.text-left]
--
<<slots_table.PSRType,&#10548;>>
--
////


//[discrete]
[#q]
=== `q`
+++Reactive power at the point of common coupling. Load sign convention is used, i.e. positive sign means flow out from a node.
Starting value for a steady state solution in the case a simplified power flow model is used.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:ACDCConverter.q`
| Cardinality
| 0..1
| Type
| xref::class/ReactivePower.adoc[`ReactivePower`]

| Inherited from
| xref::class/ACDCConverter.adoc[`ACDCConverter`]


|===

////
[.text-left]
--
<<slots_table.q,&#10548;>>
--
////


//[discrete]
[#qPccControl]
=== `qPccControl`
+++Kind of reactive power control.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:VsConverter.qPccControl`
| Cardinality
| 0..1
| Type
| xref::enumeration/VsQpccControlKind.adoc[`VsQpccControlKind`]


|===

////
[.text-left]
--
<<slots_table.qPccControl,&#10548;>>
--
////


//[discrete]
[#qShare]
=== `qShare`
+++Reactive power sharing factor among parallel converters on Uac control. The attribute shall be a positive value or zero.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:VsConverter.qShare`
| Cardinality
| 0..1
| Type
| xref::class/PerCent.adoc[`PerCent`]


|===

////
[.text-left]
--
<<slots_table.qShare,&#10548;>>
--
////


//[discrete]
[#ratedUdc]
=== `ratedUdc`
+++Rated converter DC voltage, also called UdN. The attribute shall be a positive value. It is converter’s configuration data used in power flow. For instance a bipolar HVDC link with value  200 kV has a 400kV difference between the dc lines.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:ACDCConverter.ratedUdc`
| Cardinality
| 0..1
| Type
| xref::class/Voltage.adoc[`Voltage`]

| Inherited from
| xref::class/ACDCConverter.adoc[`ACDCConverter`]


|===

////
[.text-left]
--
<<slots_table.ratedUdc,&#10548;>>
--
////


//[discrete]
[#ReportingGroup]
=== `ReportingGroup`
+++Reporting groups to which this power system resource belongs.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:PowerSystemResource.ReportingGroup`
| Cardinality
| 0..*
| Type
| xref::class/ReportingGroup.adoc[`ReportingGroup`]

| Inherited from
| xref::class/PowerSystemResource.adoc[`PowerSystemResource`]


|===

////
[.text-left]
--
<<slots_table.ReportingGroup,&#10548;>>
--
////


//[discrete]
[#resistiveLoss]
=== `resistiveLoss`
+++It is converter’s configuration data used in power flow. Refer to poleLossP. The attribute shall be a positive value.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:ACDCConverter.resistiveLoss`
| Cardinality
| 0..1
| Type
| xref::class/Resistance.adoc[`Resistance`]

| Inherited from
| xref::class/ACDCConverter.adoc[`ACDCConverter`]


|===

////
[.text-left]
--
<<slots_table.resistiveLoss,&#10548;>>
--
////


//[discrete]
[#SvStatus]
=== `SvStatus`
+++The status state variable associated with this conducting equipment.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:ConductingEquipment.SvStatus`
| Cardinality
| 0..*
| Type
| xref::class/SvStatus.adoc[`SvStatus`]

| Inherited from
| xref::class/ConductingEquipment.adoc[`ConductingEquipment`]


|===

////
[.text-left]
--
<<slots_table.SvStatus,&#10548;>>
--
////


//[discrete]
[#switchingLoss]
=== `switchingLoss`
+++Switching losses, relative to the base apparent power 'baseS'. Refer to poleLossP. The attribute shall be a positive value.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:ACDCConverter.switchingLoss`
| Cardinality
| 0..1
| Type
| xref::class/ActivePowerPerCurrentFlow.adoc[`ActivePowerPerCurrentFlow`]

| Inherited from
| xref::class/ACDCConverter.adoc[`ACDCConverter`]


|===

////
[.text-left]
--
<<slots_table.switchingLoss,&#10548;>>
--
////


//[discrete]
[#TargetingCIMDataObject]
=== `TargetingCIMDataObject`
+++Data objects registered.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.TargetingCIMDataObject`
| Cardinality
| 0..*
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.TargetingCIMDataObject,&#10548;>>
--
////


//[discrete]
[#targetPhasePcc]
=== `targetPhasePcc`
+++Phase target at AC side, at point of common coupling. The attribute shall be a positive value.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:VsConverter.targetPhasePcc`
| Cardinality
| 0..1
| Type
| xref::class/AngleDegrees.adoc[`AngleDegrees`]


|===

////
[.text-left]
--
<<slots_table.targetPhasePcc,&#10548;>>
--
////


//[discrete]
[#targetPowerFactorPcc]
=== `targetPowerFactorPcc`
+++Power factor target at the AC side, at point of common coupling. The attribute shall be a positive value.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:VsConverter.targetPowerFactorPcc`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Float[`float`]


|===

////
[.text-left]
--
<<slots_table.targetPowerFactorPcc,&#10548;>>
--
////


//[discrete]
[#targetPpcc]
=== `targetPpcc`
+++Real power injection target in AC grid, at point of common coupling.  Load sign convention is used, i.e. positive sign means flow out from a node.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:ACDCConverter.targetPpcc`
| Cardinality
| 0..1
| Type
| xref::class/ActivePower.adoc[`ActivePower`]

| Inherited from
| xref::class/ACDCConverter.adoc[`ACDCConverter`]


|===

////
[.text-left]
--
<<slots_table.targetPpcc,&#10548;>>
--
////


//[discrete]
[#targetPWMfactor]
=== `targetPWMfactor`
+++Magnitude of pulse-modulation factor. The attribute shall be a positive value.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:VsConverter.targetPWMfactor`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Float[`float`]


|===

////
[.text-left]
--
<<slots_table.targetPWMfactor,&#10548;>>
--
////


//[discrete]
[#targetQpcc]
=== `targetQpcc`
+++Reactive power injection target in AC grid, at point of common coupling.  Load sign convention is used, i.e. positive sign means flow out from a node.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:VsConverter.targetQpcc`
| Cardinality
| 0..1
| Type
| xref::class/ReactivePower.adoc[`ReactivePower`]


|===

////
[.text-left]
--
<<slots_table.targetQpcc,&#10548;>>
--
////


//[discrete]
[#targetUdc]
=== `targetUdc`
+++Target value for DC voltage magnitude. The attribute shall be a positive value.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:ACDCConverter.targetUdc`
| Cardinality
| 0..1
| Type
| xref::class/Voltage.adoc[`Voltage`]

| Inherited from
| xref::class/ACDCConverter.adoc[`ACDCConverter`]


|===

////
[.text-left]
--
<<slots_table.targetUdc,&#10548;>>
--
////


//[discrete]
[#targetUpcc]
=== `targetUpcc`
+++Voltage target in AC grid, at point of common coupling. The attribute shall be a positive value.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:VsConverter.targetUpcc`
| Cardinality
| 0..1
| Type
| xref::class/Voltage.adoc[`Voltage`]


|===

////
[.text-left]
--
<<slots_table.targetUpcc,&#10548;>>
--
////


//[discrete]
[#Terminals]
=== `Terminals`
+++Conducting equipment have terminals that may be connected to other conducting equipment terminals via connectivity nodes or topological nodes.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:ConductingEquipment.Terminals`
| Cardinality
| 0..*
| Type
| xref::class/Terminal.adoc[`Terminal`]

| Inherited from
| xref::class/ConductingEquipment.adoc[`ConductingEquipment`]


|===

////
[.text-left]
--
<<slots_table.Terminals,&#10548;>>
--
////


//[discrete]
[#uc]
=== `uc`
+++Line-to-line converter voltage, the voltage at the AC side of the valve. It is converter’s state variable, result from power flow. The attribute shall be a positive value.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:ACDCConverter.uc`
| Cardinality
| 0..1
| Type
| xref::class/Voltage.adoc[`Voltage`]

| Inherited from
| xref::class/ACDCConverter.adoc[`ACDCConverter`]


|===

////
[.text-left]
--
<<slots_table.uc,&#10548;>>
--
////


//[discrete]
[#udc]
=== `udc`
+++Converter voltage at the DC side, also called Ud. It is converter’s state variable, result from power flow. The attribute shall be a positive value.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:ACDCConverter.udc`
| Cardinality
| 0..1
| Type
| xref::class/Voltage.adoc[`Voltage`]

| Inherited from
| xref::class/ACDCConverter.adoc[`ACDCConverter`]


|===

////
[.text-left]
--
<<slots_table.udc,&#10548;>>
--
////


//[discrete]
[#UsagePoints]
=== `UsagePoints`
+++All usage points connected to the electrical grid through this equipment.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:Equipment.UsagePoints`
| Cardinality
| 0..*
| Type
| xref::class/UsagePoint.adoc[`UsagePoint`]

| Inherited from
| xref::class/Equipment.adoc[`Equipment`]


|===

////
[.text-left]
--
<<slots_table.UsagePoints,&#10548;>>
--
////


//[discrete]
[#uv]
=== `uv`
+++Line-to-line voltage on the valve side of the converter transformer. It is converter’s state variable, result from power flow. The attribute shall be a positive value.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:VsConverter.uv`
| Cardinality
| 0..1
| Type
| xref::class/Voltage.adoc[`Voltage`]


|===

////
[.text-left]
--
<<slots_table.uv,&#10548;>>
--
////


//[discrete]
[#valveU0]
=== `valveU0`
+++Valve threshold voltage, also called Uvalve. Forward voltage drop when the valve is conducting. Used in loss calculations, i.e. the switchLoss depend on numberOfValves * valveU0.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:ACDCConverter.valveU0`
| Cardinality
| 0..1
| Type
| xref::class/Voltage.adoc[`Voltage`]

| Inherited from
| xref::class/ACDCConverter.adoc[`ACDCConverter`]


|===

////
[.text-left]
--
<<slots_table.valveU0,&#10548;>>
--
////


//[discrete]
[#VerificationAction]
=== `VerificationAction`
+++The verification action that is performed on the power system resource+++


[cols="h,4",width=65%]
|===
| URI
| `cim:PowerSystemResource.VerificationAction`
| Cardinality
| 0..*
| Type
| xref::class/VerificationAction.adoc[`VerificationAction`]

| Inherited from
| xref::class/PowerSystemResource.adoc[`PowerSystemResource`]


|===

////
[.text-left]
--
<<slots_table.VerificationAction,&#10548;>>
--
////


//[discrete]
[#VSCDynamics]
=== `VSCDynamics`
+++Voltage source converter dynamics model used to describe dynamic behaviour of this converter.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:VsConverter.VSCDynamics`
| Cardinality
| 0..1
| Type
| xref::class/VSCDynamics.adoc[`VSCDynamics`]


|===

////
[.text-left]
--
<<slots_table.VSCDynamics,&#10548;>>
--
////


//[discrete]
[#WeatherStation]
=== `WeatherStation`



[cols="h,4",width=65%]
|===
| URI
| `cim:Equipment.WeatherStation`
| Cardinality
| 0..*
| Type
| xref::class/WeatherStation.adoc[`WeatherStation`]

| Inherited from
| xref::class/Equipment.adoc[`Equipment`]


|===

////
[.text-left]
--
<<slots_table.WeatherStation,&#10548;>>
--
////





== Used by


[cols="1,1",width=65%]
|===
| Source class | Slot name



| xref::class/VsCapabilityCurve.adoc[`VsCapabilityCurve`] | xref::class/VsCapabilityCurve.adoc#VsConverterDCSides[`VsConverterDCSides`]



| xref::class/VSCDynamics.adoc[`VSCDynamics`] | xref::class/VSCDynamics.adoc#VsConverter[`VsConverter`]


|===

